Fixed issues with about page overflowing on mobile

--- a/src/views/pages/about/about-page.scss
+++ b/src/views/pages/about/about-page.scss
@@ -18,6 +18,6 @@
   .carousel-container {
     display: flex;
     justify-content: center;
-    width: 50%;
+    overflow: hidden;
   }
 }
